--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
-  font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
 }
 
@@ -24,11 +23,11 @@ p {
 /* body */
 
 .site {
-  margin-left: 240px;
-  margin-top: 64px;
+  width: 100vw;
+  max-width: 960px;
   display: flex;
-  flex-direction: column wrap;
-  justify-content: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 h1 {
@@ -37,28 +36,50 @@ h1 {
   font-size: 36px;
   line-height: 44px;
   color: #4e5150;
+  max-width: 960px;
+  margin: 64px auto 50px;
 }
 
-label {
+.form-input {
+  position: relative;
+}
+
+.input-icon {
+  width: 20px;
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 16px;
+}
+
+.input-phone {
+  width: 20px;
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 14px;
+  color: #828282;
+}
+
+.textbox {
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
   color: #4f4f4f;
   transform: rotate(-0.02deg);
-}
-
-input {
   width: 465px;
   height: 56px;
   border: 1px solid #828282;
   border-radius: 12px;
   margin-top: 7px;
   margin-bottom: 20px;
+  padding: 18px 52px;
+  background: none;
 }
 
-.info {
-  margin-top: 51px;
+.form-row {
+  width: 465px;
 }
 
 .title {
@@ -71,6 +92,201 @@ input {
   transform: rotate(-0.02deg);
 }
 
+label {
+  color: #4F4F4F;
+  transform: rotate(-0.02deg);
+}
+
 .shipping-info {
   margin-top: 58px;
+  display: flex;
+  flex-direction: column;
+}
+
+.wrap-checkbox {
+  display: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox {
+  width: 21px;
+  height: 21px;
+}
+
+.save-info {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  color: #4f4f4f;
+  transform: rotate(-0.02deg);
+}
+
+.button-wrapper {
+  text-align: right;
+}
+
+.continue {
+  width: 166px;
+  height: 54px;
+  color: white;
+  background: #f2994a;
+  border-radius: 12px;
+  border: 1px solid #f2994a;
+  margin-top: 23px;
+}
+
+.summary {
+  background: #f2f2f2;
+  border-radius: 12px;
+  width: 383px;
+  height: 535px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.summary img {
+  max-width: 136px;
+  max-height: 134px;
+  object-fit: cover;
+  border-radius: 13px;
+  margin-right: 21px;
+  margin-left: 30px;
+}
+
+.item1 {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 31px;
+}
+
+.info-item1,
+.info-item2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.item2 {
+  display: flex;
+  flex-direction: row;
+}
+
+p,
+strike {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #4e5150;
+  transform: rotate(-0.02deg);
+}
+
+.price {
+  display: flex;
+  justify-content: space-between;
+}
+
+.amount-wrapper {
+  border-radius: 12px;
+  border: 1px solid #828282;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 134px;
+  height: 52px;
+  border: 1px solid #828282;
+  border-radius: 12px;
+  margin-top: 7px;
+  margin-bottom: 20px;
+}
+
+.plus-btn,
+.minus-btn {
+  width: 21px;
+  height: 21px;
+  background-color: #e0e0e0;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  color: #828282;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.price {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #f2994a;
+  transform: rotate(-0.02deg);
+}
+
+.shipping-costs,
+.total {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  margin: 16px 26px;
+  padding-top: 11px;
+  border-top: 1px solid #bdbdbd;
+  transform: rotate(-0.18deg);
+}
+
+@media screen and (max-width: 667px) {
+  .site {
+    /* width: 375px; */
+    display: flex;
+    flex-direction: column-reverse;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  h1 {
+    margin-top: 32px;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
+
+  .textbox {
+    width: 100%;
+    height: 41px;
+  }
+
+  .form-row {
+    width: 100%;
+  }
+
+  .input-icon {
+    width: 20px;
+    position: absolute;
+    z-index: 1;
+    top: 18px;
+    left: 16px;
+  }
+
+  .summary {
+    margin: 20px auto 40px;
+    width: 350px;
+    height: 489px;
+  }
+
+  .button-wrapper {
+    text-align: right;
+    margin-right: 10px;
+  }
+}
+
+/* footer */
+
+footer {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  color: rgba(51, 51, 51, 0.9);
+  height: 10%;
+  margin-top: 20px;
+  text-align: center;
 }
